--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Styled Web Page</title>
+    <title>wanderlust</title>
     <style>
         body {
             background-color: black;
@@ -35,10 +35,10 @@
 </head>
 <body>
 
-    <h1>My Custom Web Page</h1>
+    <h1>typetest</h1>
     <div class="editor-container">
         <div id="editor">
-            <p>Type here... You can add images using the toolbar above.</p>
+            <p>Type here...</p>
         </div>
     </div>
 
